# dots

./: .bash_profile  .bashrc  .gitattributes  .gitignore  .vimrc  .zshrc  Brewfile  README.md  extensions.txt  fetch.toml  fsync.yml  get-lastest.sh  get-latest.sh  hello.md  push-latest.sh  use.sh
.github/: PULL_REQUEST_TEMPLATE.md
VSCode/: extensions.txt  settings.json
alacritty/: alacritty.yml
eDEX-UI/: settings.json
flutter/: .flutter_settings
homebrew/: Brewfile  README.md
hyper/: .hyper.js
jrnl/: .jrnl.yaml
macos/: shortcuts.plist
matt/: .gdbinit  .gitconfig  .minirc.dfl  .p10k.zsh  .tmux.conf  .zprofile  .zshrc  crons.txt
matt/.config/raycast/: config.json  pyproject.toml  requirements.txt
matt/.config/raycast/apps/: open-factorio.sh  open-stardew-valley.sh
matt/.config/raycast/extensions/emojicast/: index.js  package.json
matt/.config/raycast/fgh/: clone.sh
matt/.config/raycast/github/: github-create-repository  github-create-repository.sh  github-create-repository.swift
matt/.config/raycast/script-commands/: apple-music-pause.applescript  open-desktop.sh  receiver-volume-up.sh  turn-off-receiver.sh  turn-on-receiver.sh
matt/.config/raycast/system/: projects.sh
matt/.config/raycast/templates/: script-command.template.applescript
matt/.config/raycast/texsch/: commit.sh  separate.sh
matt/.config/raycast/vscode/: code-config.sh  code-fgh.py
mattgleich/: .gitconfig  .p10k.zsh  .phoenix.js  .profile  .tmux.conf  .zprofile  .zshrc
morse-modules/: dashfile.yaml
neofetch/: bashtop.cfg
npm/: packages.txt
nuke/: config.yml
(+222 files in other folders)
