[tool.poetry]
name = "raycast"
version = "0.1.0"
description = ""
authors = ["Matthew Gleich <git@mattglei.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
